Modernizing code taking advantage of java17 (#1036)